--- a/styles/style.css
+++ b/styles/style.css
@@ -13,3 +13,34 @@ body{
     margin-left: auto;
     list-style: none;
 }
+.nav-links{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+}
+.home{
+    height: 90vh;
+    position: absolute;
+    width: 100%;
+    /* opacity: 0; */
+}
+.home-content{
+    display: flex;
+    height: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.home-content  img{
+    height: 70%;
+}
+.home-content  h1{
+    font-size: 50px;
+    margin: 30px 0;
+
+}
+.home-content  p{
+    font-size: 20px;
+}
+.home{
+    background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+}
