--- a/styles/style.css
+++ b/styles/style.css
@@ -18,29 +18,32 @@ body{
     color: black;
     font-size: 18px;
 }
-.home{
+.home,.about{
     height: 90vh;
     position: absolute;
     width: 100%;
     /* opacity: 0; */
 }
-.home-content{
+.home-content,.about-content{
     display: flex;
     height: 100%;
     justify-content: space-evenly;
     align-items: center;
 }
-.home-content  img{
+.home-content,.about-content  img{
     height: 70%;
 }
-.home-content  h1{
+.home-content,.about-content  h1{
     font-size: 50px;
     margin: 30px 0;
 
 }
-.home-content  p{
+.home-content,.about-content  p{
     font-size: 20px;
 }
 .home{
     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
+}
+.about{
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
